# review-mode-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
agents/cursor/.cursor/rules/: review-mode.mdc
cline/.clinerules/: review-mode.md
cursor/.cursor/rules/: review-mode-update.mdc
src/review_mode_mcp/: __init__.py  revisions.py  server.py  utils.py
src/review_mode_mcp/data/agents/cline/.cline/skills/review-mode/: SKILL.md
src/review_mode_mcp/data/agents/cline/.clinerules/: review-mode-update.md
